# pypuck

./: .gitignore  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypuck.rst
pypuck/: get_curr_perfomance.py  pypuck.py
pypuck/helpers/: helpers.py
tests/: test_pypuck.py
