[tool.poetry]
name = "pypuck"
version = "0.1.0"
description = "Functions to access the publicly available but uncodumented NHL.com API"
authors = ["jarvis Nederlof <jarvisnederlof@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
