[tool.poetry]
name = "pypuck"
version = "0.2.2"
description = "Functions to access the publicly available but uncodumented NHL.com API"
authors = ["jarvis Nederlof <jarvisnederlof@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
requests = "^2.23.0"
altair = "^3.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
