[tool.poetry]
name = "pypuck"
version = "1.0.0"
description = "Functions to access the publicly available but uncodumented NHL.com API"
authors = ["Jarvis Nederlof <jarvisnederlof@gmail.com>", "Xugang Zhong <chuusankirk@hotmail.com>", "Polina Romanchenko <romanchenko.p96@gmail.com>", "Manish Joshi <Manishpjoshi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
requests = "^2.23.0"
altair = "^3.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
flake8 = "^3.7.9"
python-semantic-release = "^4.10.0"

[tool.semantic_release]
version_variable = "pypuck/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "true"
patch_without_tag = "true"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

